[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledger"
version = "0.1.0"
description = "Tamper-evident contribution ledger for creative projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zanden Kane" },
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
ledger = "ledger.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ledger"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
